# DataPreprocessing

./: ai_platform.py  gpt_platform.py  pd_processing.py  pohang.py  pyproject.toml  requirements.txt  visu.py
data/: Mobiltech_Data.csv  Mobiltech_banner_data.csv  Mobiltech_crack_data.csv  Mobiltech_pothole_data.csv  Mobiltech_trash_data.csv  Mobiltech_vehicle_data.csv  Mobitech_data.txt  경상북도.csv
data/남구/: 남구_banner_Mobiltech_data.csv  남구_crack_Mobiltech_data.csv  남구_pothole_Mobiltech_data.csv  남구_trash_Mobiltech_data.csv  남구_vehicle_Mobiltech_data.csv
data/북구/: 북구_banner_Mobiltech_data.csv  북구_crack_Mobiltech_data.csv  북구_pothole_Mobiltech_data.csv  북구_trash_Mobiltech_data.csv  북구_vehicle_Mobiltech_data.csv
