[tool.poetry]
name = "datavisualization"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
scikit-learn = "^1.5.1"
plotly = "^5.22.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
numpy = "^2.0.1"
geopandas = "^1.0.1"
opencv-python = "^4.10.0.84"
openai = "0.28"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
